tests/smt2/error/produce-model-false.smt2
(set-option :produce-models false)
(declare-const a Bool)
(assert a)
(check-sat)
(get-model)
(get-value (a))